# cpp-trace-logger

./: .clang-format  CMakeLists.txt  README.md  modify-trace.sh
example/: CMakeLists.txt  instrumentation.cpp  library.cpp  library.hpp  main.cpp
examples/: CMakeLists.txt  instrumentation.cpp  library.cpp  threaded-example.cpp
include/: tracer.hpp
src/: tracer.cpp
